# Multicore-DBSCAN

./: README.md
Assets/: index-cellID.drawio
Code/: .gitignore  CMakeLists.txt  makefile
Code/data/input/: data-10.txt  data-10000.txt  data-100000.txt  data-20000.txt  data-2500.txt  data-8000.txt  getDataset.sh
Code/data/output/: DBSCAN-data-2500-out.csv  DBSCAN-data-8000-out.csv  Hybrid-DBSCAN-data-2500-out.csv  Hybrid-DBSCAN-data-8000-out.csv
Code/graph/: color.py
Code/include/: BPSDBSCAN.hpp  DBSCAN.hpp  Dataset.hpp  DenseBox.hpp  HybridDBSCAN.cuh  HybridDBSCAN.hpp  OriginalDBSCAN.hpp  Shadower.cuh  global.hpp  utils.hpp
Code/lib/: BPSDBSCAN.cpp  CMakeLists.txt  DBSCAN.cpp  DBSCAN.cu  Dataset.cpp  DenseBox.cpp  HybridDBSCAN.cu  OriginalDBSCAN.cpp  Shadower.cu  utils.cpp
Code/src/: main.cpp  test.cpp
Reports/: presentation.pptx  书面报告.md  选题报告.md
